backend.log

> tethra-dex-backend@1.0.0 dev
> nodemon --exec ts-node src/index.ts

[33m[nodemon] 3.1.10[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/services/TapToTradeExecutor.ts(263,31): error TS2339: Property 'marketExecutorAddress' does not exist on type 'TapToTradeExecutor'.
src/services/TapToTradeExecutor.ts(267,46): error TS2339: Property 'marketExecutor' does not exist on type 'TapToTradeExecutor'.
src/services/TapToTradeExecutor.ts(319,31): error TS2339: Property 'marketExecutor' does not exist on type 'TapToTradeExecutor'.

    at createTSError (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339, 2339, 2339 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/services/TapToTradeExecutor.ts(267,46): error TS2339: Property 'marketExecutor' does not exist on type 'TapToTradeExecutor'.
src/services/TapToTradeExecutor.ts(319,31): error TS2339: Property 'marketExecutor' does not exist on type 'TapToTradeExecutor'.

    at createTSError (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339, 2339 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
src/services/TapToTradeExecutor.ts(319,31): error TS2339: Property 'marketExecutor' does not exist on type 'TapToTradeExecutor'.

    at createTSError (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1895:10
    at Object.require.extensions.<computed> [as .ts] (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1465:32)
    at Function._load (node:internal/modules/cjs/loader:1282:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2339 ]
}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
[32m[nodemon] restarting due to changes...[39m
[32m[nodemon] starting `ts-node src/index.ts`[39m
[2025-10-19T10:06:18.260Z] [INFO] [Main] 🚀 Starting Tethra DEX Backend (Pyth Oracle Integration)...
[2025-10-19T10:06:18.294Z] [SUCCESS] [PriceSignerService] ✅ Price Signer initialized
[2025-10-19T10:06:18.294Z] [INFO] [PriceSignerService] 📝 Signer Address: 0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
[2025-10-19T10:06:18.295Z] [INFO] [PriceSignerService] 💡 Note: No gas needed - signing is off-chain!
[2025-10-19T10:06:18.300Z] [INFO] [RelayService] 🔄 Relay Service initialized
[2025-10-19T10:06:18.301Z] [INFO] [RelayService]    Relay Wallet: 0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
[2025-10-19T10:06:18.306Z] [INFO] [LimitOrderService] 🔄 LimitOrderService initialized
[2025-10-19T10:06:18.306Z] [INFO] [LimitOrderService]    Keeper wallet: 0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
[2025-10-19T10:06:18.306Z] [INFO] [LimitOrderService]    LimitExecutorV2: 0x8c297677FEA6F0beDC0D1fa139aa2bc23eE6234a
[2025-10-19T10:06:18.306Z] [INFO] [GridTradingService] 🎯 GridTradingService initialized (in-memory storage)
[2025-10-19T10:06:18.306Z] [WARN] [GridTradingService] ⚠️  Data will be lost on server restart
[2025-10-19T10:06:18.307Z] [INFO] [TapToTradeService] 🎯 TapToTradeService initialized (in-memory storage)
[2025-10-19T10:06:18.307Z] [WARN] [TapToTradeService] ⚠️  Data will be lost on server restart
[2025-10-19T10:06:18.307Z] [INFO] [PythPriceService] 🚀 Initializing Pyth Price Service...
[2025-10-19T10:06:18.307Z] [INFO] [PythPriceService] 📊 Monitoring 8 assets via Pyth Network
[2025-10-19T10:06:18.307Z] [INFO] [PythPriceService] 📡 Connecting to: wss://hermes.pyth.network/ws
[2025-10-19T10:06:18.307Z] [INFO] [PythPriceService] 🔗 Connecting to Pyth WebSocket...
[2025-10-19T10:06:18.347Z] [SUCCESS] [PythPriceService] ✅ Pyth Price Service initialized successfully
[2025-10-19T10:06:18.349Z] [INFO] [Main] 🎯 Initializing TP/SL Monitor...
[2025-10-19T10:06:18.355Z] [INFO] [TPSLMonitor] 🎯 TP/SL Monitor initialized
[2025-10-19T10:06:18.355Z] [INFO] [TPSLMonitor]    Keeper: 0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
[2025-10-19T10:06:18.355Z] [INFO] [TPSLMonitor]    Position Manager: 0x8eA6059Bd95a9f0A47Ce361130ffB007415519aF
[2025-10-19T10:06:18.355Z] [INFO] [TPSLMonitor]    Market Executor: 0xA1badd2cea74931d668B7aB99015ede28735B3EF
[2025-10-19T10:06:18.355Z] [INFO] [TPSLMonitor] ▶️  Starting TP/SL monitor...
[2025-10-19T10:06:18.355Z] [SUCCESS] [Main] ✅ TP/SL Monitor started! Ready to execute TP/SL orders...
[2025-10-19T10:06:18.355Z] [INFO] [Main] 🤖 Initializing Limit Order Executor...
[2025-10-19T10:06:18.360Z] [INFO] [LimitOrderExecutor] 🤖 Limit Order Executor initialized
[2025-10-19T10:06:18.360Z] [INFO] [LimitOrderExecutor]    Keeper: 0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
[2025-10-19T10:06:18.360Z] [INFO] [LimitOrderExecutor]    Price Signer: 0x722550Bb8Ec6416522AfE9EAf446F0DE3262f701
[2025-10-19T10:06:18.360Z] [INFO] [LimitOrderExecutor]    LimitExecutor: 0x8c297677FEA6F0beDC0D1fa139aa2bc23eE6234a
[2025-10-19T10:06:18.360Z] [INFO] [LimitOrderExecutor] ▶️  Starting limit order executor...
[2025-10-19T10:06:18.361Z] [SUCCESS] [Main] ✅ Limit Order Executor started! Monitoring for orders...
[2025-10-19T10:06:18.361Z] [INFO] [Main] 🎯 Initializing Tap-to-Trade Executor...
[2025-10-19T10:06:18.370Z] [ERROR] [Main] Failed to start Tethra DEX Backend: {"message":"TAP_TO_TRADE_EXECUTOR_ADDRESS not configured","stack":"Error: TAP_TO_TRADE_EXECUTOR_ADDRESS not configured\n    at new TapToTradeExecutor (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/src/services/TapToTradeExecutor.ts:58:13)\n    at main (/home/naufalfzml/Projects/Hackathon/base-batches/tethra-be/src/index.ts:80:32)\n    at processTicksAndRejections (node:internal/process/task_queues:105:5)"}
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
